--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,12 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
-
+  <div class="container">
+    <ul>
+      {% for like in site.data.likes %}
+      <li> {{like}} </li>
+      {% endfor %}
+    </ul>
+  </div>
 </article>
 This is a {{page.yo}}.
