--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
   <div class="container">
     <ul>
       {% for like in site.data.likes %}
-      <li> {{likes.like}} </li>
+      <li> {{like.like}} </li>
       {% endfor %}
     </ul>
   </div>
