--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,8 +12,8 @@ layout: default
   </div>
   <div class="container">
     <ul>
-      {% for like in site.data.likes %}
-      <li> {{like.like}} </li>
+      {% for preference in site.data.likes %}
+      <li> {{preference.preference}} </li>
       {% endfor %}
     </ul>
   </div>
